--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,70 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Avenir', sans-serif;
+  justify-content: center;
+  padding-top: 20px;
+  padding-left: 300px;
+  padding-right: 300px;
+  padding-bottom: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1 {
+
+  border: 1px solid black;
+  justify-content: center;
+  margin: 6px;
+  padding: 6px;
+}
+
+h3 {
+  border: 1px solid black;
+  margin: 6px;
+  padding: 6px;
+
+}
+
+h4 {
+  border: 1px solid black;
+  margin: 6px;
+  padding: 6px;
+
+}
+
+select {
+margin: 0 auto 20px auto;
+display: block;
+font-size: 18px;
+}
+
+img {
+  display: inline-block;
+  border: 1px solid black;
+  margin: 6px;
+  padding: 6px;
+}
+
+audio {
+  display: inline-block;
+  border: 1px solid black;
+  margin: 6px;
+  padding: 6px;
+}
+.details {
+
+  border: 1px solid black;
+  margin: 6px;
+  padding: 6px;
+
+}
+
+.selector {
+  /* justify-content: center; */
+  margin: 0 auto 20px auto;
+  display: block;
+  font-size: 20px;
+}
+
+.song {
+  border: 1px solid black;
+  margin: 6px;
+  padding: 6px;
 }
