--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Avenir', sans-serif;
+  color: #252626;
   justify-content: center;
   padding-top: 20px;
   padding-left: 300px;
@@ -7,25 +8,30 @@ body {
   padding-bottom: 20px;
 }
 
+
+
+
 h1 {
 
-  border: 1px solid black;
-  justify-content: center;
+  border: 1px solid #252626;
+  text-align: center;
   margin: 6px;
   padding: 6px;
 }
 
 h3 {
-  border: 1px solid black;
+  border: 1px solid #252626;
   margin: 6px;
   padding: 6px;
 
 }
 
 h4 {
-  border: 1px solid black;
+  border: 1px solid #252626;
+  font-size: 15px;
   margin: 6px;
   padding: 6px;
+  background-color: #e8eade;
 
 }
 
@@ -33,27 +39,30 @@ select {
 margin: 0 auto 20px auto;
 display: block;
 font-size: 18px;
+padding: 6px;
 }
 
 img {
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid #252626;
   margin: 6px;
   padding: 6px;
 }
 
 audio {
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid #252626;
+  height: 60px;
   margin: 6px;
   padding: 6px;
+
 }
 .details {
 
-  border: 1px solid black;
+  border: 1px solid #252626;
   margin: 6px;
   padding: 6px;
-
+  /* background-color: beige; */
 }
 
 .selector {
@@ -64,7 +73,8 @@ audio {
 }
 
 .song {
-  border: 1px solid black;
+  /* border: 1px solid #252626; */
   margin: 6px;
   padding: 6px;
+
 }
